# gimlight

./: .gitignore  .hlint.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cabal.project.freeze  gimlight.cabal  hie.yaml  roguelike.cabal
.github/workflows/: haskell.yml
app/: Actions.hs  Coord.hs  Direction.hs  Dungeon.hs  Engine.hs  Entity.hs  Event.hs  Game.hs  Log.hs  Main.hs  Map.hs  Message.hs  Save.hs  Scene.hs  Talking.hs  UI.hs
app/Dungeon/: BoolMap.hs  Entity.hs  GameMap.hs  Generate.hs  Map.hs  PathFinder.hs  Predefined.hs  RectangularRoom.hs  Room.hs  Size.hs  Tile.hs  TileMap.hs  Turn.hs  Types.hs
app/Dungeon/Entity/: Behavior.hs  Friendly.hs  Monsters.hs
app/Dungeon/Map/: Bool.hs  Explored.hs  Fov.hs  Tile.hs
app/Dungeon/Predefined/: Beaeve.hs
app/Entity/: Behavior.hs  Friendly.hs  Monsters.hs
app/Map/: Bool.hs  Explored.hs  Fov.hs  Tile.hs
app/UI/: Attrs.hs  Draw.hs  Event.hs  Types.hs
app/UI/Draw/: Map.hs
images/: book.xcf  cave.edg  cave_floor.edg  down_stairs.xcf  dungeon_chip.xcf  game_opening.xcf  grass.edg  grass.xcf  herb.xcf  map_tiles.kra  map_tiles.xcf  path.edg  person.edg  sample_standing_picture.xcf  sea.edg  sea.kra  stairs.edg  talking_window.kra  talking_window.xcf  town.xcf  up_stairs.xcf  wall.xcf  white_wall.edg  window.kra  wooden_floor.edg
images/tiles/: path.json
maps/: beaeve.json  global_map.json  tiles.json
src/: Action.hs  Actor.hs  Coord.hs  Dungeon.hs  Engine.hs  Fov.hs  Game.hs  GameConfig.hs  GameModel.hs  GameStatus.hs  IndexGenerator.hs  Inventory.hs  Item.hs  Localization.hs  Log.hs  Main.hs  NpcBehavior.hs  Player.hs  Quest.hs  Save.hs  Scene.hs  Talking.hs  TreeZipper.hs  main.rs
src/Action/: Consume.hs  Drop.hs  Melee.hs  Move.hs  PickUp.hs  Wait.hs
src/Actor/: Actions.hs  Friendly.hs  Identifier.hs  Inventory.hs  Monsters.hs  NpcBehavior.hs  Player.hs  Status.hs
src/Actor/Actions/: Consume.hs  Drop.hs  Melee.hs  Move.hs  PickUp.hs  Wait.hs
src/Actor/Friendly/: Electria.hs
src/Actor/Status/: Experience.hs  Hp.hs
src/Dungeon/: Actor.hs  Entity.hs  Generate.hs  Identifier.hs  Init.hs  Item.hs  Map.hs  PathFinder.hs  Size.hs  Stairs.hs  Types.hs
src/Dungeon/Actor/: Actions.hs  Behavior.hs  Friendly.hs  Inventory.hs  Monsters.hs  NpcBehavior.hs  Player.hs  Status.hs
src/Dungeon/Actor/Actions/: Consume.hs  Drop.hs  Melee.hs  Move.hs  PickUp.hs  Wait.hs
src/Dungeon/Actor/Status/: Experience.hs  Hp.hs
src/Dungeon/Entity/: Actions.hs  Behavior.hs  Friendly.hs  Monsters.hs
src/Dungeon/Generate/: Config.hs  Room.hs
src/Dungeon/Item/: Book.hs  Heal.hs
src/Dungeon/Map/: Actor.hs  Bool.hs  Cell.hs  Explored.hs  Fov.hs  JSONReader.hs  Tile.hs
src/Dungeon/Map/Tile/: JSONReader.hs
src/Dungeon/Predefined/: BatsCave.hs  Beaeve.hs  GlobalMap.hs
src/Game/: Config.hs  Status.hs
src/Game/Status/: Exploring.hs  Player.hs  Scene.hs  SelectingItemToUse.hs  Talking.hs
src/Game/Status/Exploring/: Dungeons.hs
src/GameModel/: Config.hs  Status.hs
src/GameModel/Status/: Exploring.hs  ReadingBook.hs  Scene.hs  SelectingItemToDrop.hs  SelectingItemToUse.hs  Talking.hs
src/GameModel/Status/Exploring/: Dungeons.hs
src/GameStatus/: Exploring.hs  Player.hs  ReadingBook.hs  Scene.hs  SelectingItem.hs  SelectingItemToDrop.hs  SelectingItemToUse.hs  Talking.hs
src/GameStatus/Exploring/: Dungeons.hs
src/GameStatus/Talking/: Part.hs
src/Gimlight/: Action.hs  Actor.hs  Coord.hs  Dungeon.hs  Fov.hs  Game.hs  GameConfig.hs  GameModel.hs  GameStatus.hs  IndexGenerator.hs  Inventory.hs  Item.hs  Localization.hs  Log.hs  NpcBehavior.hs  Player.hs  Quest.hs  Save.hs  TreeZipper.hs
src/Gimlight/Action/: Consume.hs  Drop.hs  Melee.hs  Move.hs  PickUp.hs  Wait.hs
src/Gimlight/Actor/: Friendly.hs  Identifier.hs  Monsters.hs  Status.hs
src/Gimlight/Actor/Friendly/: Electria.hs
src/Gimlight/Actor/Status/: Experience.hs  Hp.hs
src/Gimlight/Data/: Array.hs  Either.hs  List.hs  Maybe.hs  String.hs
src/Gimlight/Dungeon/: Generate.hs  Identifier.hs  Init.hs  PathFinder.hs  Stairs.hs
src/Gimlight/GameStatus/: Exploring.hs  ReadingBook.hs  Scene.hs  SelectingItem.hs  Talking.hs
src/Gimlight/Item/: Book.hs  Heal.hs
src/Gimlight/Localization/: Texts.hs
src/Gimlight/Quest/: KillBats.hs
src/Gimlight/UI/: Draw.hs  Event.hs  Types.hs
src/Gimlight/UI/Draw/: Fonts.hs  (+10 more)
src/Item/: Book.hs  Heal.hs
src/Localization/: Texts.hs
src/Localization/Texts/: Actions.hs  Actors.hs  Books.hs  Items.hs  Scene.hs  SelectingItem.hs  Status.hs  Title.hs
src/Quest/: KillBats.hs
src/UI/: Draw.hs  Event.hs  Graphics.hs  Types.hs
src/UI/Draw/: Config.hs  Exploring.hs  GameOver.hs  KeyEvent.hs  ReadingBook.hs  Scene.hs  SelectingItem.hs  SelectingItemToDrop.hs  SelectingItemToUse.hs  SelectingLocale.hs  Talking.hs  Title.hs
src/UI/Graphics/: MapTiles.hs
tests/: DungeonSpec.hs  FovSpec.hs  Generator.hs  Main.hs  SetUp.hs
tests/Action/: ConsumeSpec.hs  DropSpec.hs  MeleeSpec.hs  MoveSpec.hs  PickUpSpec.hs  WaitSpec.hs
tests/Data/: ArraySpec.hs
tests/Dungeon/: GenerateSpec.hs
tests/Dungeon/Generate/: ConfigSpec.hs
tests/Dungeon/Map/: CellSpec.hs  JSONReaderSpec.hs
tests/Gimlight/: FovSpec.hs  Generator.hs
tests/Gimlight/Action/: ConsumeSpec.hs  DropSpec.hs  MeleeSpec.hs  MoveSpec.hs  PickUpSpec.hs  WaitSpec.hs
tests/Gimlight/Data/: ArraySpec.hs  EitherSpec.hs  ListSpec.hs  MaybeSpec.hs  StringSpec.hs
tests/Gimlight/Dungeon/: GenerateSpec.hs
tests/Gimlight/SetUp/: CellMap.hs  ImageFile.hs  MapFile.hs  TileFile.hs
tests/SetUp/: CellMap.hs  Dungeon.hs  ImageFile.hs  MapFile.hs  TileFile.hs
tests/maps/: multiple_tile_files.json  not_square.json  rotation.json  single_tile.json  transform_and_rotation.json
tests/maps/generate/: seed_0.json
tests/tiles/: haskell.json  no_properties.json  single.json  united.json  unwalkable.json
tests/tiles/invalid/: no_properties.json
tests/tiles/valid/: generate.json  haskell.json  single.json  united.json  unwalkable.json
tiles/: cave.json  cave_floor.json  grass.json  path.json  sea.json  stairs.json  tiles.json  white_wall.json  wooden_floor.json
(+25 files in other folders)
