cabal-version:      2.4
name:               gimlight
version:            0.1.0.0

author:             Hiroki Tokunaga
maintainer:         tokusan441@gmail.com

extra-source-files: CHANGELOG.md

executable gimlight
    main-is:          Main.hs
    ghc-options:      -threaded -Wall -Werror

    other-modules:      Action
                      , Action.Consume
                      , Action.Drop
                      , Action.Melee
                      , Action.Move
                      , Action.PickUp
                      , Action.Wait
                      , Actor
                      , Actor.NpcBehavior
                      , Actor.Friendly
                      , Actor.Friendly.Electria
                      , Actor.Identifier
                      , Actor.Inventory
                      , Actor.Monsters
                      , Actor.Status
                      , Actor.Status.Hp
                      , Actor.Status.Experience
                      , Coord
                      , Dungeon
                      , Dungeon.Generate
                      , Dungeon.Generate.Config
                      , Dungeon.Generate.Room
                      , Dungeon.Identifier
                      , Dungeon.Init
                      , Dungeon.Map
                      , Dungeon.Map.Actor
                      , Dungeon.Map.Bool
                      , Dungeon.Map.Explored
                      , Dungeon.Map.Fov
                      , Dungeon.Map.JSONReader
                      , Dungeon.Map.Tile
                      , Dungeon.Map.Tile.JSONReader
                      , Dungeon.PathFinder
                      , Dungeon.Predefined.BatsCave
                      , Dungeon.Predefined.Beaeve
                      , Dungeon.Predefined.GlobalMap
                      , Dungeon.Size
                      , Dungeon.Stairs
                      , GameConfig
                      , GameModel
                      , GameStatus
                      , GameStatus.Exploring
                      , GameStatus.Exploring.Dungeons
                      , GameStatus.ReadingBook
                      , GameStatus.Scene
                      , GameStatus.SelectingItem
                      , GameStatus.Talking
                      , GameStatus.Talking.Part
                      , IndexGenerator
                      , Item
                      , Item.Book
                      , Item.Heal
                      , Localization
                      , Localization.Texts
                      , Localization.Texts.Actions
                      , Localization.Texts.Actors
                      , Localization.Texts.Actors.Electria
                      , Localization.Texts.Books
                      , Localization.Texts.Items
                      , Localization.Texts.Scene
                      , Localization.Texts.Status
                      , Localization.Texts.Title
                      , Log
                      , Player
                      , Quest
                      , Quest.KillBats
                      , Save
                      , TreeZipper
                      , UI.Draw
                      , UI.Draw.Config
                      , UI.Draw.Exploring
                      , UI.Draw.GameOver
                      , UI.Draw.KeyEvent
                      , UI.Draw.ReadingBook
                      , UI.Draw.Scene
                      , UI.Draw.SelectingLocale
                      , UI.Draw.SelectingItem
                      , UI.Draw.Talking
                      , UI.Draw.Title
                      , UI.Graphics
                      , UI.Graphics.MapTiles
                      , UI.Event
                      , UI.Types

    build-depends:      astar >= 0.3.0 && < 1
                      , array >= 0.5.4 && < 1
                      , base >= 4.14.3 && < 5
                      , binary >= 0.8.8 && < 1
                      , bytestring-to-vector >= 0.3.0.1 && < 1
                      , containers >= 0.6.5.1 && < 1
                      , data-default >= 0.7.1 && < 1
                      , directory >= 1.3.7 && < 2
                      , lens >= 5.0.1 && < 6
                      , lens-aeson >= 1.1.3 && < 2
                      , linear >= 1.21.7 && < 2
                      , JuicyPixels >= 3.3.6 && < 4
                      , JuicyPixels-extra >= 0.5.2 && < 1
                      , monomer >= 1.1.1 && < 2
                      , mtl >= 2.2.2 && < 3
                      , random >= 1.2.1 && < 2
                      , split >= 0.2.3 && < 1
                      , text >= 1.2.4 && < 2
                      , text-show >= 3.9.2 && < 4
                      , transformers >= 0.5.6 && < 1
                      , unordered-containers >= 0.2.14 && < 1
                      , vector >= 0.12.3.1 && < 1
                      , vector-split >= 1.0.0.2 && < 2
    hs-source-dirs:   src
    default-language: Haskell2010
