cabal-version:          2.4
name:                   gimlight
version:                0.1.0.0

author:                 Hiroki Tokunaga
maintainer:             tokusan441@gmail.com

extra-source-files:     CHANGELOG.md

common common
    build-depends:      astar >= 0.3.0 && < 0.4
                      , array >= 0.5.4 && < 0.6
                      , base >= 4.14.3 && < 4.15
                      , binary >= 0.8.8 && < 0.9
                      , bytestring-to-vector >= 0.3.0.1 && < 0.4
                      , containers >= 0.6.5.1 && < 0.7
                      , data-default >= 0.7.1 && < 0.8
                      , directory >= 1.3.7 && < 1.4
                      , either >= 5.0.1.1 && < 5.1
                      , filepath >= 1.4.1.2 && < 1.5
                      , lens >= 5.0.1 && < 5.1
                      , lens-aeson >= 1.1.3 && < 1.2
                      , linear >= 1.21.7 && < 1.22
                      , JuicyPixels >= 3.3.6 && < 3.4
                      , JuicyPixels-extra >= 0.5.2 && < 0.6
                      , monomer >= 1.2.0.0 && < 1.3
                      , mtl >= 2.2.2 && < 2.3
                      , random >= 1.2.1 && < 1.3
                      , split >= 0.2.3 && < 0.3
                      , text >= 1.2.4 && < 1.3
                      , text-show >= 3.9.2 && < 3.10
                      , transformers >= 0.5.6 && < 0.6
                      , unordered-containers >= 0.2.14 && < 0.3
                      , vector >= 0.12.3.1 && < 0.13
                      , vector-split >= 1.0.0.2 && < 1.1
    ghc-options:        -Wall -Werror


Test-Suite spec
    import:             common
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    other-modules:      Action.ConsumeSpec
                      , Action.DropSpec
                      , Action.MeleeSpec
                      , Action.MoveSpec
                      , Action.PickUpSpec
                      , Action.WaitSpec
                      , Dungeon.Map.CellSpec
                      , Dungeon.Map.JSONReaderSpec
                      , Dungeon.Map.Tile.JSONReaderSpec
                      , FovSpec
                      , SetUp.Dungeon
                      , SetUp.ImageFile
                      , SetUp.MapFile
                      , SetUp.TileFile

    build-depends:      gimlight
                      , hspec >= 2.9.1 && < 2.10
                      , QuickCheck >= 2.14.2 && < 2.15

    hs-source-dirs:     tests
    default-Language:   Haskell2010

library
    import:             common
    exposed-modules:    Action
                      , Action.Consume
                      , Action.Drop
                      , Action.Melee
                      , Action.Move
                      , Action.PickUp
                      , Action.Wait
                      , Actor
                      , Actor.Identifier
                      , Actor.Monsters
                      , Actor.Status
                      , Actor.Status.Hp
                      , Coord
                      , Dungeon
                      , Dungeon.Identifier
                      , Dungeon.Map.Cell
                      , Dungeon.Map.JSONReader
                      , Dungeon.Map.Tile
                      , Dungeon.Map.Tile.JSONReader
                      , Fov
                      , Game
                      , IndexGenerator
                      , Inventory
                      , Item
                      , Item.Heal
                      , Localization.Texts
                      , UI.Draw.Config

    other-modules:      Actor.Friendly
                      , Actor.Friendly.Electria
                      , Actor.Status.Experience
                      , Dungeon.Generate
                      , Dungeon.Generate.Config
                      , Dungeon.Generate.Room
                      , Dungeon.Init
                      , Dungeon.PathFinder
                      , Dungeon.Predefined.BatsCave
                      , Dungeon.Predefined.Beaeve
                      , Dungeon.Predefined.GlobalMap
                      , Dungeon.Size
                      , Dungeon.Stairs
                      , GameConfig
                      , GameModel
                      , GameStatus
                      , GameStatus.Exploring
                      , GameStatus.Exploring.Dungeons
                      , GameStatus.ReadingBook
                      , GameStatus.Scene
                      , GameStatus.SelectingItem
                      , GameStatus.Talking
                      , GameStatus.Talking.Part
                      , Item.Book
                      , Localization
                      , Localization.Texts.Actions
                      , Localization.Texts.Actors
                      , Localization.Texts.Actors.Electria
                      , Localization.Texts.Books
                      , Localization.Texts.Items
                      , Localization.Texts.Scene
                      , Localization.Texts.Status
                      , Localization.Texts.Title
                      , Log
                      , NpcBehavior
                      , Player
                      , Quest
                      , Quest.KillBats
                      , Save
                      , TreeZipper
                      , UI.Draw
                      , UI.Draw.Exploring
                      , UI.Draw.GameOver
                      , UI.Draw.KeyEvent
                      , UI.Draw.ReadingBook
                      , UI.Draw.Scene
                      , UI.Draw.SelectingLocale
                      , UI.Draw.SelectingItem
                      , UI.Draw.Talking
                      , UI.Draw.Title
                      , UI.Event
                      , UI.Types

    hs-source-dirs:     src

    default-language:   Haskell2010

executable gimlight
    import:             common
    main-is:            Main.hs
    ghc-options:        -threaded

    build-depends:      gimlight

    hs-source-dirs:     app
    default-language:   Haskell2010
