cabal-version:          2.4
name:                   gimlight
version:                0.1.0.0

author:                 Hiroki Tokunaga
maintainer:             tokusan441@gmail.com

extra-source-files:     CHANGELOG.md

common common
    build-depends:      astar >= 0.3.0 && < 0.4
                      , array >= 0.5.4 && < 0.6
                      , base >= 4.14.3 && < 4.15
                      , binary >= 0.8.8 && < 0.9
                      , bytestring-to-vector >= 0.3.0.1 && < 0.4
                      , containers >= 0.6.5.1 && < 0.7
                      , data-default >= 0.7.1 && < 0.8
                      , directory >= 1.3.7 && < 1.4
                      , either >= 5.0.1.1 && < 5.1
                      , filepath >= 1.4.1.2 && < 1.5
                      , lens >= 5.0.1 && < 5.1
                      , lens-aeson >= 1.1.3 && < 1.2
                      , linear >= 1.21.7 && < 1.22
                      , JuicyPixels >= 3.3.6 && < 3.4
                      , JuicyPixels-extra >= 0.5.2 && < 0.6
                      , mmorph >= 1.2.0 && < 1.3
                      , monomer >= 1.2.0.0 && < 1.3
                      , mtl >= 2.2.2 && < 2.3
                      , random >= 1.2.1 && < 1.3
                      , split >= 0.2.3 && < 0.3
                      , text >= 1.2.4 && < 1.3
                      , text-show >= 3.9.2 && < 3.10
                      , transformers >= 0.5.6 && < 0.6
                      , unordered-containers >= 0.2.14 && < 0.3
                      , vector >= 0.12.3.1 && < 0.13
                      , vector-split >= 1.0.0.2 && < 1.1
    ghc-options:        -Wall -Werror


Test-Suite spec
    import:             common
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    other-modules:      Gimlight.Action.ConsumeSpec
                      , Gimlight.Action.DropSpec
                      , Gimlight.Action.MeleeSpec
                      , Gimlight.Action.MoveSpec
                      , Gimlight.Action.PickUpSpec
                      , Gimlight.Action.WaitSpec
                      , Gimlight.Data.ArraySpec
                      , Gimlight.Dungeon.GenerateSpec
                      , Gimlight.Dungeon.Generate.ConfigSpec
                      , Gimlight.Dungeon.Map.CellSpec
                      , Gimlight.Dungeon.Map.JSONReaderSpec
                      , Gimlight.Dungeon.Map.Tile.JSONReaderSpec
                      , Gimlight.FovSpec
                      , Gimlight.Generator
                      , Gimlight.SetUp.CellMap
                      , Gimlight.SetUp.ImageFile
                      , Gimlight.SetUp.MapFile
                      , Gimlight.SetUp.TileFile

    build-depends:      gimlight
                      , hspec >= 2.9.1 && < 2.10
                      , QuickCheck >= 2.14.2 && < 2.15

    hs-source-dirs:     tests
    default-Language:   Haskell2010

library
    import:             common
    exposed-modules:    Gimlight.Action
                      , Gimlight.Action.Consume
                      , Gimlight.Action.Drop
                      , Gimlight.Action.Melee
                      , Gimlight.Action.Move
                      , Gimlight.Action.PickUp
                      , Gimlight.Action.Wait
                      , Gimlight.Actor
                      , Gimlight.Actor.Identifier
                      , Gimlight.Actor.Monsters
                      , Gimlight.Actor.Status
                      , Gimlight.Actor.Status.Hp
                      , Gimlight.Coord
                      , Gimlight.Dungeon
                      , Gimlight.Dungeon.Generate
                      , Gimlight.Dungeon.Generate.Config
                      , Gimlight.Dungeon.Identifier
                      , Gimlight.Dungeon.Map.Cell
                      , Gimlight.Dungeon.Map.JSONReader
                      , Gimlight.Dungeon.Map.Tile
                      , Gimlight.Dungeon.Map.Tile.JSONReader
                      , Gimlight.Fov
                      , Gimlight.Game
                      , Gimlight.IndexGenerator
                      , Gimlight.Inventory
                      , Gimlight.Item
                      , Gimlight.Item.Heal
                      , Gimlight.Localization.Texts
                      , Gimlight.UI.Draw.Config

    other-modules:      Gimlight.Actor.Friendly
                      , Gimlight.Actor.Friendly.Electria
                      , Gimlight.Actor.Status.Experience
                      , Gimlight.Dungeon.Generate.Room
                      , Gimlight.Dungeon.Init
                      , Gimlight.Dungeon.PathFinder
                      , Gimlight.Dungeon.Predefined.BatsCave
                      , Gimlight.Dungeon.Predefined.Beaeve
                      , Gimlight.Dungeon.Predefined.GlobalMap
                      , Gimlight.Dungeon.Stairs
                      , Gimlight.GameConfig
                      , Gimlight.GameModel
                      , Gimlight.GameStatus
                      , Gimlight.GameStatus.Exploring
                      , Gimlight.GameStatus.Exploring.Dungeons
                      , Gimlight.GameStatus.ReadingBook
                      , Gimlight.GameStatus.Scene
                      , Gimlight.GameStatus.SelectingItem
                      , Gimlight.GameStatus.Talking
                      , Gimlight.GameStatus.Talking.Part
                      , Gimlight.Item.Book
                      , Gimlight.Localization
                      , Gimlight.Localization.Texts.Actions
                      , Gimlight.Localization.Texts.Actors
                      , Gimlight.Localization.Texts.Actors.Electria
                      , Gimlight.Localization.Texts.Books
                      , Gimlight.Localization.Texts.Items
                      , Gimlight.Localization.Texts.Scene
                      , Gimlight.Localization.Texts.Status
                      , Gimlight.Localization.Texts.Title
                      , Gimlight.Log
                      , Gimlight.NpcBehavior
                      , Gimlight.Player
                      , Gimlight.Quest
                      , Gimlight.Quest.KillBats
                      , Gimlight.Save
                      , Gimlight.TreeZipper
                      , Gimlight.UI.Draw
                      , Gimlight.UI.Draw.Exploring
                      , Gimlight.UI.Draw.GameOver
                      , Gimlight.UI.Draw.KeyEvent
                      , Gimlight.UI.Draw.ReadingBook
                      , Gimlight.UI.Draw.Scene
                      , Gimlight.UI.Draw.SelectingLocale
                      , Gimlight.UI.Draw.SelectingItem
                      , Gimlight.UI.Draw.Talking
                      , Gimlight.UI.Draw.Title
                      , Gimlight.UI.Event
                      , Gimlight.UI.Types

    hs-source-dirs:     src

    default-language:   Haskell2010

executable gimlight
    import:             common
    main-is:            Main.hs
    ghc-options:        -threaded

    build-depends:      gimlight

    hs-source-dirs:     app
    default-language:   Haskell2010
