cabal-version:      2.4
name:               roguelike
version:            0.1.0.0

author:             Hiroki Tokunaga
maintainer:         tokusan441@gmail.com

extra-source-files: CHANGELOG.md

executable roguelike
    main-is:          Main.hs
    ghc-options:      -threaded -Wall -Werror

    other-modules:      Coord
                      , Dungeon
                      , Dungeon.Actor
                      , Dungeon.Actor.Actions
                      , Dungeon.Actor.Actions.Consume
                      , Dungeon.Actor.Actions.Melee
                      , Dungeon.Actor.Actions.Move
                      , Dungeon.Actor.Actions.PickUp
                      , Dungeon.Actor.Actions.Wait
                      , Dungeon.Actor.Behavior
                      , Dungeon.Actor.Friendly
                      , Dungeon.Actor.Inventory
                      , Dungeon.Actor.Player
                      , Dungeon.Actor.Monsters
                      , Dungeon.Actor.Status
                      , Dungeon.Actor.Status.Hp
                      , Dungeon.Generate
                      , Dungeon.Generate.Room
                      , Dungeon.Init
                      , Dungeon.Item
                      , Dungeon.Map
                      , Dungeon.Map.Bool
                      , Dungeon.Map.Explored
                      , Dungeon.Map.Fov
                      , Dungeon.Map.Tile
                      , Dungeon.PathFinder
                      , Dungeon.Predefined.BatsCave
                      , Dungeon.Predefined.Beaeve
                      , Dungeon.Predefined.GlobalMap
                      , Dungeon.Size
                      , Dungeon.Stairs
                      , Dungeon.Turn
                      , GameModel
                      , GameModel.Config
                      , GameModel.Status
                      , GameModel.Status.Exploring
                      , GameModel.Status.Exploring.Dungeons
                      , GameModel.Status.Scene
                      , GameModel.Status.SelectingItemToUse
                      , GameModel.Status.Talking
                      , Localization
                      , Localization.Texts
                      , Localization.Texts.Actions
                      , Localization.Texts.Actors
                      , Localization.Texts.Items
                      , Localization.Texts.Scene
                      , Localization.Texts.SelectingItem
                      , Localization.Texts.Status
                      , Localization.Texts.Title
                      , Log
                      , Save
                      , Scene
                      , Talking
                      , TreeZipper
                      , UI.Draw
                      , UI.Draw.Config
                      , UI.Draw.Exploring
                      , UI.Draw.GameOver
                      , UI.Draw.KeyEvent
                      , UI.Draw.Scene
                      , UI.Draw.SelectingLocale
                      , UI.Draw.SelectingItem
                      , UI.Draw.Talking
                      , UI.Draw.Title
                      , UI.Event
                      , UI.Types

    build-depends:      astar >= 0.3.0 && < 1
                      , array >= 0.5.4 && < 1
                      , base >= 4.14.3 && < 5
                      , binary >= 0.8.8 && < 1
                      , containers >= 0.6.5.1 && < 1
                      , data-default >= 0.7.1 && < 1
                      , directory >= 1.3.7 && < 2
                      , lens >= 5.0.1 && < 6
                      , linear >= 1.21.7 && < 2
                      , monomer >= 1.1.1 && < 2
                      , mtl >= 2.2.2 && < 3
                      , random >= 1.2.1 && < 2
                      , split >= 0.2.3 && < 1
                      , text >= 1.2.4 && < 2
                      , text-show >= 3.9.2 && < 4
                      , transformers >= 0.5.6 && < 1
                      , unordered-containers >= 0.2.14 && < 1
    hs-source-dirs:   src
    default-language: Haskell2010
