cabal-version:      2.4
name:               roguelike
version:            0.1.0.0

author:             Hiroki Tokunaga
maintainer:         tokusan441@gmail.com

extra-source-files: CHANGELOG.md

executable roguelike
    main-is:          Main.hs
    ghc-options:      -threaded -Wall -Werror

    other-modules:      Actor
                      , Actor.Actions
                      , Actor.Actions.Consume
                      , Actor.Actions.Drop
                      , Actor.Actions.Melee
                      , Actor.Actions.Move
                      , Actor.Actions.PickUp
                      , Actor.Actions.Wait
                      , Actor.NpcBehavior
                      , Actor.Friendly
                      , Actor.Inventory
                      , Actor.Player
                      , Actor.Monsters
                      , Actor.Status
                      , Actor.Status.Hp
                      , Actor.Status.Experience
                      , Coord
                      , Dungeon
                      , Dungeon.Generate
                      , Dungeon.Generate.Room
                      , Dungeon.Init
                      , Dungeon.Map
                      , Dungeon.Map.Bool
                      , Dungeon.Map.Explored
                      , Dungeon.Map.Fov
                      , Dungeon.Map.Tile
                      , Dungeon.PathFinder
                      , Dungeon.Predefined.BatsCave
                      , Dungeon.Predefined.Beaeve
                      , Dungeon.Predefined.GlobalMap
                      , Dungeon.Size
                      , Dungeon.Stairs
                      , GameConfig
                      , GameModel
                      , GameStatus
                      , GameStatus.Exploring
                      , GameStatus.Exploring.Dungeons
                      , GameStatus.ReadingBook
                      , GameStatus.Scene
                      , GameStatus.SelectingItemToDrop
                      , GameStatus.SelectingItemToUse
                      , GameStatus.Talking
                      , Item
                      , Item.Book
                      , Item.Heal
                      , Localization
                      , Localization.Texts
                      , Localization.Texts.Actions
                      , Localization.Texts.Actors
                      , Localization.Texts.Books
                      , Localization.Texts.Items
                      , Localization.Texts.Scene
                      , Localization.Texts.SelectingItem
                      , Localization.Texts.Status
                      , Localization.Texts.Title
                      , Log
                      , Save
                      , Scene
                      , Talking
                      , TreeZipper
                      , UI.Draw
                      , UI.Draw.Config
                      , UI.Draw.Exploring
                      , UI.Draw.GameOver
                      , UI.Draw.KeyEvent
                      , UI.Draw.ReadingBook
                      , UI.Draw.Scene
                      , UI.Draw.SelectingLocale
                      , UI.Draw.SelectingItemToDrop
                      , UI.Draw.SelectingItemToUse
                      , UI.Draw.Talking
                      , UI.Draw.Title
                      , UI.Event
                      , UI.Types

    build-depends:      astar >= 0.3.0 && < 1
                      , array >= 0.5.4 && < 1
                      , base >= 4.14.3 && < 5
                      , binary >= 0.8.8 && < 1
                      , containers >= 0.6.5.1 && < 1
                      , data-default >= 0.7.1 && < 1
                      , directory >= 1.3.7 && < 2
                      , lens >= 5.0.1 && < 6
                      , linear >= 1.21.7 && < 2
                      , monomer >= 1.1.1 && < 2
                      , mtl >= 2.2.2 && < 3
                      , random >= 1.2.1 && < 2
                      , split >= 0.2.3 && < 1
                      , text >= 1.2.4 && < 2
                      , text-show >= 3.9.2 && < 4
                      , transformers >= 0.5.6 && < 1
                      , unordered-containers >= 0.2.14 && < 1
    hs-source-dirs:   src
    default-language: Haskell2010
